--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome, <%=current_user.email%>!</h1>
+<h3>Welcome, <%=current_user.email%>!</h3>
+<h5>We're at users index</h5>
+
+<div id='content'></div>
