--- a/app/assets/templates/boards/index.jst.ejs
+++ b/app/assets/templates/boards/index.jst.ejs
@@ -1,5 +1,5 @@
 <ul>
 <% boards.each(function (board) { %>
-  <li><%= board.title %></li>
+  <li><%= board.escape("title") %></li>
   <% }); %>
 </ul>
