--- a/app/assets/templates/boards/index.jst.ejs
+++ b/app/assets/templates/boards/index.jst.ejs
@@ -1,5 +1,8 @@
 <ul>
 <% boards.each(function (board) { %>
-  <li><%= board.escape("title") %></li>
+  <% var url = "/board/" + board.id + "/lists" %>
+  <li>
+    <a href = <%= url %>> <%= board.escape("title") %> </a>
+  </li> 
   <% }); %>
 </ul>
