--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,2 +1,6 @@
-<div id='sidebar'></div>
-<div id='content'></div>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span2" id='sidebar'></div>
+    <div class="span10" id='content'></div>
+  </div>
+</div>
