--- a/app/assets/templates/boards/index.jst.ejs
+++ b/app/assets/templates/boards/index.jst.ejs
@@ -1,4 +1,4 @@
-<ul>
+<ul class="nav nav-pills nav-stacked">
 <% boards.each(function (board) { %>
   <% var url = "#/boards/" + board.id + "/lists" %>
   <li>
