--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span2" id='sidebar'></div>
-    <div class="span10" id='content'></div>
+    <div data-id="list-container" class="span10" id='content'></div>
   </div>
 </div>
