--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -1,42 +1,68 @@
 <style>
-  [data-id="list"] { list-style-type: none; margin: 0; padding: 0; float: left; margin-right: 10px; background: #eee; padding: 5px; width: 143px;}
+  .list { list-style-type: none; margin: 0; padding: 0; float: left; margin-right: 10px; background: #eee; padding: 5px; width: 140px;}
   
-  .container-placeholder { border-style: dotted; border-width: 3px; list-style-type: none; margin: 0; padding: 0; float: left; margin-right: 10px; background: #eee; padding: 5px; width: 143px;}
+  .new-list { list-style-type: none; margin: 0; padding: 0; float: left; margin-right: 10px; background: #eee; padding: 5px; width: 140px;}
+  
+  .new-list-form {
+    padding: 0px;
+
+  }
+  
+  button.new-list-form {
+    width: 100px;
+    height: 20px;
+  }
 </style>
-  
+
+
 <script>
 $(function() {
-  $( "[data-id='list-container']" ).sortable({
+  $( '.list-container' ).sortable({
     // connectWith: "[data-id='list']",
-    items: "[data-id='list']",
+    items: ".list",
     tolerance: "pointer",
     // helper: "clone",
-    placeholder: ".container-placeholder"
+    // placeholder: ".container-placeholder"
   });
   
-  $( "ul.btn-large" ).sortable({
-    connectWith: "ul",
+  $( "ul.list" ).sortable({
+    connectWith: "ul.list",
     // tolerance: "pointer",
     // items: "[data-id='card']"
   });
   
-  $( "[data-id='list']" ).disableSelection();
+  $( ".list" ).disableSelection();
     });
 </script>
 
-<% lists.each(function (list) { %>
-  <ul data-id="list" class="btn-large">
-    <%= list.escape("title") %>
+<section class='list-container'>
+  <% lists.each(function (list) { %>
+    <ul class="btn-large list">
+      <%= list.escape("title") %>
+      <br>
+      <% var cards = list.attributes.cards %>
     
-    <% var cards = list.attributes.cards %>
-    <% if(cards.length > 0){ %>
-      <% cards.forEach(function(card) { %>
-        <li data-id="card" class="btn">
-          <%= card.title %>
-        </li> 
+      <% if(cards != undefined ){ %>
+        <% cards.forEach(function(card) { %>
+          <li class="btn card">
+            <%= card.title %>
+          </li> 
         <% }) %>
-        <% } %>
+      <% } %>
       </ul>
-      <% }); %>
-      
-<!-- <section class='container-placeholder'></section> -->
+  <% }); %>
+</section>
+
+<div class='btn-large new-list'>Add a new list</div>
+
+<div class='btn-large new-list-form' style="display: none;">
+  <form class='new-list-form'>
+  <input 
+    class='new-list-form' 
+    type='text' 
+    name='list[title]' 
+    placeholder='insert new title'>
+    
+    <input class='new-list-form' type='submit'>
+  </form>
+</div>
