add board form, hide board form, et al. done. allowing board-add to save to DB + working on deleting them

--- a/app/assets/templates/boards/index.jst.ejs
+++ b/app/assets/templates/boards/index.jst.ejs
@@ -5,4 +5,18 @@
     <a href = <%= url %>> <%= board.escape("title") %> </a>
   </li> 
   <% }); %>
+  
+  <!-- Add a board li -->
+  <li class='add-board'>
+    <a href="">Add a board...</a>
+    <form class='add-board-form' style='display: none;'>
+    <input 
+      class='add-board-form' 
+      type='text' 
+      name='board[title]' 
+      placeholder='insert new title'>
+    
+      <input class='add-board-form' type='submit'>
+    </form>
+  </li>
 </ul>
