--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 <body>
 
-<div class="container">
+<div class="todorize">
 
   <% if user_signed_in? %>
     Logged in as <strong><%= current_user.email %></strong>.
