--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,8 @@
             >Sort.Tea</a>
           </li>  
           <% if user_signed_in? %>
-          <li>
+          <li class="divider-vertical"></li>
+          <li class='pull-right'>
             <p class="navbar-text navbar-right">
               Logged in as <strong><%= current_user.email %></strong></a>
             </p>
