finished most of root page bootstrap

--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -53,6 +53,9 @@ $(document).ready(function() {
       connectWith: "ul.list",
       tolerance: "pointer",
       items: '.card',
+      update: function(){
+        
+      }
     });
 });
 
