--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -17,9 +17,19 @@
       text-align:center;
       background: rgba(255, 255, 255, 0.75);
 }
-.row > .span4 > img {
-  margin-left: 15%;
+
+
+.imgframe {
+  text-align: center;
+  display: block;
 }
+
+/*.imgframe > img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+}*/
+
 .spacing {
   height: 100px;
 }
@@ -73,23 +83,26 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="span4">
-          <img class='text-center' style="width: 140px; height: 140px;" src="http://www.sxc.hu/assets/182971/1829708653/notepad-1083254-m.jpg">
-          <h2>Jot down Ideas</h2>
+        <div class="span4" style='text-align: center'>
+          <span class='imgframe'>
+            <img style="width: 140px; height: 140px;" src="http://www.sxc.hu/assets/182971/1829708653/notepad-1083254-m.jpg">
+          </span>
+          <h2 style='text-align: center'>Jot down Ideas</h2>
           <p>No need for a notebook and a pencil. Simply sign in. Anywhere, anytime.</p>
-          <p><a class="btn" href="#">View details »</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
+        <span class='imgframe'>
           <img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details »</a></p>
+        </span>
+          <h2>Chores for the Family</h2>
+          <p>Why are you the only one stuck doing the dishes? Tell your loved one to take out the trash. And the recycling.</p>
         </div><!-- /.span4 -->
         <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details »</a></p>
+        <span class='imgframe'>
+            <img style="width: 140px; height: 140px;" src="http://www.sxc.hu/assets/182971/1829708653/notepad-1083254-m.jpg">
+        </span>
+          <h2>Collaborate Now</h2>
+          <p>Are you a team player? Um.brello brings the "team" in a player with its board-sharing feature for friends or colleagues.</p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
