--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class='container'>
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
@@ -27,3 +28,11 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
 <%= link_to "Back", :back %>
+  <div class='spacing'></div>
+  
+  <footer>
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p>© 2013 created by Vincent Park · <a href="https://github.com/vpark">Github</a> · <a href="mailto:vincentpark@gmail.com">Email</a></p>
+  </footer>
+  
+</div>
