--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
 
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 
+  <style>
+  .spacing {
+    height: 100px;
+  }
+  </style>
+
 </head>
 
 <body>
@@ -56,7 +62,8 @@
 
 
   
-</div>
+</div>     
+
 </body>
 
 </html>
