adding css and images to root#root

--- a/app/assets/templates/boards/new.jst.ejs
+++ b/app/assets/templates/boards/new.jst.ejs
@@ -1,4 +1,4 @@
-<form class='add-board-form' style='display: block;'>
+<!-- <form class='add-board-form' style='display: block;'>
 <input 
   class='add-board-form' 
   type='text' 
@@ -6,4 +6,8 @@
   placeholder='insert new title'>
 
   <input class='add-board-form' type='submit'>
-</form>
+</form> -->
+
+<!-- <div class='container'>
+  <h1>Welcome</h1>
+</div> -->
