--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -83,24 +83,24 @@
       <div class="row">
         <div class="span4" style='text-align: center'>
           <span class='imgframe'>
-            <img style="width: 140px; height: 140px;" src="http://www.sxc.hu/assets/182971/1829708653/notepad-1083254-m.jpg">
+            <img style="" src="http://www.wrike.com/imgs/home/Full-featured_project_management_software_Wrike.png">
           </span>
           <h2 style='text-align: center'>Jot down Ideas</h2>
           <p>No need for a notebook and a pencil. Simply sign in. Anywhere, anytime.</p>
         </div><!-- /.span4 -->
         <div class="span4">
         <span class='imgframe'>
-          <img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="">
+            <img style="" src="http://www.wrike.com/imgs/home/All_project_data_in_one_place_Wrike.png">
         </span>
           <h2>Chores for the Family</h2>
           <p>Why are you the only one stuck doing the dishes? Tell your loved one to take out the trash. And the recycling.</p>
         </div><!-- /.span4 -->
         <div class="span4">
         <span class='imgframe'>
-            <img style="width: 140px; height: 140px;" src="http://www.sxc.hu/assets/182971/1829708653/notepad-1083254-m.jpg">
+            <img style="" src="http://www.wrike.com/imgs/home/Email-integrated_project_management_software_Wrike.png">
         </span>
           <h2>Collaborate Now</h2>
-          <p>Are you a team player? Um.brello brings the "team" in a player with its board-sharing feature for friends or colleagues.</p>
+          <p>Are you a team player? Um.brello brings the "team" to a player with its board-sharing feature for friends or colleagues.</p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
