made more css changes

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,10 @@
+<style>
+  div.session  {
+    font-family: 'Helvetica neue' !important;  
+  }
+</style>
+
+<div class='container session'>
 <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
@@ -16,3 +23,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
